Fix the presses page alignment

--- a/app/assets/stylesheets/resources/static/_press.sass
+++ b/app/assets/stylesheets/resources/static/_press.sass
@@ -22,3 +22,4 @@
     width: 49%
     margin-bottom: 20px
     display: inline-block
+    vertical-align: top
